# ZInspector

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
backend/: Cargo.toml  README.md  package-lock.json  package.json
backend/src/: lib.rs
server/: setup.py
server/protos/: zinspector.proto
server/src/: object.py  project.py  zinspector.py
server/src/elements/: mesh.py  object.py  project.py
server/tests/: test_mesh.py  test_object.py  test_project.py
src/: config.ts  index.html  logging.ts  main.js  main.ts  preload.js  preload.ts
src/app/: app.tsx  main.ts  preload.ts  renderer.ts
src/assets/: index.html
src/server/: setup.py  zinspector.proto  zinspector.py
src/server/elements/: mesh.py  object.py  project.py
src/server/tests/: test_mesh.py  test_object.py  test_project.py
src/ui/: index.html  package-lock.json  package.json
src/ui/src/: App.css  App.scss  App.tsx  Dashboard.tsx  Explorer.tsx  Inspection.tsx  Layout.tsx  StartPage.tsx  Workbench.tsx  global.d.ts  main.tsx
src/ui/src/assets/: App.scss  Dashboard.scss  Explorer.scss  Inspection.scss  Main.scss  Workbench.scss  _common.scss
ui/: index.html
