[package]
name = "backend"
version = "0.1.0"
description = "ZInspector computation backend"
authors = ["Frank Blankenburg"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.0"
num_cpus = "1.13"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.5"
